@@ -1,3 +1,7 @@
+2014-12-19  Matteo Corti  <matteo@corti.li>
+
+	* t/00_modules.t: removed dependency on Sort::Version 
+
 2014-09-21  Matteo Corti  <matteo@corti.li>
 
 	* Version 1.6.8
